BuddyPress.org: Make sure multiple rows of homepage features don't overlap each other.
git-svn-id: https://meta.svn.wordpress.org/sites/trunk@514 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/buddypress.org/public_html/wp-content/themes/bb-base/style.css
+++ b/buddypress.org/public_html/wp-content/themes/bb-base/style.css
@@ -171,7 +171,7 @@ div.feature p {
 	font-size: 11px;
 }
 #showcase div.feature h3 {
-	margin: -10px 0 10px 0;
+	margin: 0px 0 10px 0;
 }
 div.feature img {
 	float: left;
